# sn102

./: .gitignore  OPTIMIZED_MINER_README.md  PM2_COMMANDS.md  README.md  ecosystem.config.js  fix_huggingface_auth.py  optimized_miner_config.py  pyproject.toml  requirements_optimized.txt  run_optimized_miner.py  test_optimized_miner.py
BetterTherapy/: __init__.py  mock.py  protocol.py
BetterTherapy/api/: dummy.py  get_query_axons.py
BetterTherapy/base/: miner.py  neuron.py  validator.py
BetterTherapy/base/utils/: weight_utils.py
BetterTherapy/utils/: config.py  llm.py  misc.py  uids.py  wandb.py
BetterTherapy/validator/: forward.py  reward.py
docs/stream_tutorial/: client.py  miner.py  protocol.py
evals/: __main__.py  completion.py  eval.py  syntectic.py
evals/data/: samples.jsonl
neurons/: miner.py  optimized_miner.py  validator.py
tests/: helpers.py  test_mock.py  test_template_validator.py
